--- a/HealthWare-ActiveASSIST/Healthware.ActiveAssist.WebApp/src/app/components/common/profile/profile-setting/profile-setting.component.html
+++ b/HealthWare-ActiveASSIST/Healthware.ActiveAssist.WebApp/src/app/components/common/profile/profile-setting/profile-setting.component.html
@@ -214,7 +214,7 @@
                 </div>
                 <div class="col-md-4">
                     <div style="position: relative;">
-                        <input type="text" class="form-control textfield-label disabledDiv" id="county"
+                        <input type="text" class="form-control textfield-label" id="county"
                             placeholder="County" formControlName="county" [(ngModel)]="county" maxlength="51"
                             [ngClass]="profileSettingForm.get('county').errors && myform.submitted?'form-control-invalid': 'form-control'">
                     </div>
