--- a/HealthWare-ActiveASSIST/Healthware.ActiveAssist.WebApp/src/app/components/common/address-verification/address-verification.component.html
+++ b/HealthWare-ActiveASSIST/Healthware.ActiveAssist.WebApp/src/app/components/common/address-verification/address-verification.component.html
@@ -51,7 +51,7 @@
   
   <div class="modal-footer">
     <div class="float-right">
-      <button type="button" [disabled]="isDisable" (click)="successPopup()" class="btn btn-success ml-2">OK</button>
+      <button id="success" type="button" [disabled]="isDisable" (click)="successPopup()" class="btn ml-2">OK</button>
       <button type="button" (click)="cancelPopup()" class="btn btn-light ml-2">Cancel</button>
     </div>
   </div>
