--- a/HealthWare-ActiveASSIST/Healthware.ActiveAssist.WebApp/src/app/components/common/esign-document/esign-document.component.html
+++ b/HealthWare-ActiveASSIST/Healthware.ActiveAssist.WebApp/src/app/components/common/esign-document/esign-document.component.html
@@ -1,11 +1,11 @@
 <div class="col-xs-12 col-md-12 col-sm-12" style="overflow: hidden;position: absolute;top: 100px;height: 560px;" [ngClass]=this.currentTheme>
   <div class="container-fluid" style="height: 480px;">
-    <div class="col-md-7 d-flex justify-content-end float-right">
+    <div class="col-md-7 float-left">
     <button class="btn btn-primary white-color mx-3 login-button-label" style="width: fit-content" (click)="cancelDocument()" data-bs-dismiss="modal">Cancel</button>
     <button class="btn btn-primary white-color mx-3 login-button-label" style="width: fit-content;" (click)="finishDocument()" data-bs-dismiss="modal">Finish</button>
   </div>
-<div> 
-  <iframe *ngIf="this.displayIframe" id="iframe" [src]="this.documentfinalUrl" width="100%" height="520px"></iframe>
+<div style="margin-top: 20px;"> 
+  <iframe *ngIf="this.displayIframe" id="iframe" [src]="this.documentfinalUrl" style="width: 100%; position:fixed; height: 80%;"></iframe>
 </div>
 </div>
 </div>
